src/Parser/Generated/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.0 from Parser.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> program                            (0)
	program -> includes construct_list eof             (1)
	construct_list ->                                  (2)
	construct_list -> construct_list construct         (3)
	construct -> funcdecl                              (4)
	construct -> structdecl                            (5)
	construct -> vardecl                               (6)
	structdecl -> struct ident '{' vardecl_list '}' ';'   (7)
	funcdecl -> type ident '(' ')' block               (8)
	funcdecl -> type ident '(' formals ')' block       (9)
	vardecl -> type ident array_sizes ';'              (10)
	vardecl_list -> vardecl_list vardecl               (11)
	vardecl_list -> vardecl                            (12)
	formals -> formal                                  (13)
	formals -> formals ',' formal                      (14)
	formal -> type ident                               (15)
	block -> '{' block_statements '}'                  (16)
	block_statements ->                                (17)
	block_statements -> block_statements statement     (18)
	statement -> expr ';'                              (19)
	statement -> block                                 (20)
	statement -> while '(' expr ')' statement          (21)
	statement -> for '(' opt_expr ';' opt_expr ';' opt_expr ')' statement   (22)
	statement -> if '(' expr ')' statement else statement   (23)
	statement -> if '(' expr ')' statement             (24)
	statement -> return opt_expr ';'                   (25)
	statement -> vardecl                               (26)
	expr -> int                                        (27)
	expr -> double                                     (28)
	expr -> char                                       (29)
	expr -> string                                     (30)
	expr -> null                                       (31)
	expr -> ident                                      (32)
	expr -> expr '=' expr                              (33)
	expr -> expr '||' expr                             (34)
	expr -> expr '&&' expr                             (35)
	expr -> expr '|' expr                              (36)
	expr -> expr '^' expr                              (37)
	expr -> expr '&' expr                              (38)
	expr -> expr '==' expr                             (39)
	expr -> expr '!=' expr                             (40)
	expr -> expr '>=' expr                             (41)
	expr -> expr '>' expr                              (42)
	expr -> expr '<=' expr                             (43)
	expr -> expr '<' expr                              (44)
	expr -> expr '+' expr                              (45)
	expr -> expr '-' expr                              (46)
	expr -> expr '*' expr                              (47)
	expr -> expr '/' expr                              (48)
	expr -> expr '%' expr                              (49)
	expr -> '(' expr ')'                               (50)
	expr -> '!' expr                                   (51)
	expr -> '-' expr                                   (52)
	expr -> '&' expr                                   (53)
	expr -> '*' expr                                   (54)
	expr -> expr '.' ident                             (55)
	expr -> expr '[' expr ']'                          (56)
	expr -> expr '->' ident                            (57)
	expr -> sizeof '(' type ')'                        (58)
	expr -> sizeof '(' expr ')'                        (59)
	expr -> '(' type ')' expr                          (60)
	expr -> ident '(' actuals ')'                      (61)
	expr -> ident '(' ')'                              (62)
	opt_expr ->                                        (63)
	opt_expr -> expr                                   (64)
	type -> primitive_type stars                       (65)
	type -> struct_type stars                          (66)
	primitive_type -> tint                             (67)
	primitive_type -> tdouble                          (68)
	primitive_type -> tchar                            (69)
	primitive_type -> tvoid                            (70)
	struct_type -> struct ident                        (71)
	stars ->                                           (72)
	stars -> stars '*'                                 (73)
	array_sizes ->                                     (74)
	array_sizes -> array_sizes '[' int ']'             (75)
	actuals -> expr                                    (76)
	actuals -> actuals ',' expr                        (77)
	includes ->                                        (78)
	includes -> includes include string                (79)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	int            { L.LitInt $$ }
	double         { L.LitDouble $$ }
	string         { L.LitString $$ }
	char           { L.LitChar $$ }
	null           { L.LitNull }
	ident          { L.Ident $$ }
	tint           { L.Type L.Int }
	tdouble        { L.Type L.Double }
	tchar          { L.Type L.Char }
	tvoid          { L.Type L.Void }
	struct         { L.Struct }
	return         { L.Return }
	'='            { L.Assign }
	','            { L.Comma }
	';'            { L.Semi }
	'('            { L.LParen }
	')'            { L.RParen }
	'{'            { L.LBrace }
	'}'            { L.RBrace }
	'['            { L.LBrack }
	']'            { L.RBrack }
	for            { L.For }
	while          { L.While }
	if             { L.If }
	else           { L.Else }
	'+'            { L.Plus }
	'-'            { L.Minus }
	'*'            { L.Asterisk }
	'/'            { L.Div }
	'%'            { L.Mod }
	'=='           { L.Equal }
	'!='           { L.Neq }
	'<'            { L.Less }
	'<='           { L.Leq }
	'>'            { L.Greater }
	'>='           { L.Geq }
	'&&'           { L.And }
	'||'           { L.Or }
	'!'            { L.Not }
	'&'            { L.Ampers }
	'|'            { L.Bar }
	'^'            { L.Caret }
	'.'            { L.Dot }
	'->'           { L.Arrow }
	sizeof         { L.Sizeof }
	include        { L.Include }
	eof            { L.Eof }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	program         rule  1
	construct_list  rules 2, 3
	construct       rules 4, 5, 6
	structdecl      rule  7
	funcdecl        rules 8, 9
	vardecl         rule  10
	vardecl_list    rules 11, 12
	formals         rules 13, 14
	formal          rule  15
	block           rule  16
	block_statements rules 17, 18
	statement       rules 19, 20, 21, 22, 23, 24, 25, 26
	expr            rules 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 38, 39, 40, 41, 42, 43, 44, 45, 46, 47, 48, 49, 50, 51, 52, 53, 54, 55, 56, 57, 58, 59, 60, 61, 62
	opt_expr        rules 63, 64
	type            rules 65, 66
	primitive_type  rules 67, 68, 69, 70
	struct_type     rule  71
	stars           rules 72, 73
	array_sizes     rules 74, 75
	actuals         rules 76, 77
	includes        rules 78, 79

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . program                           (rule 0)

	tint           reduce using rule 78
	tdouble        reduce using rule 78
	tchar          reduce using rule 78
	tvoid          reduce using rule 78
	struct         reduce using rule 78
	include        reduce using rule 78
	eof            reduce using rule 78

	program        goto state 3
	includes       goto state 2

State 1

	program -> . includes construct_list eof            (rule 1)


	includes       goto state 2

State 2

	program -> includes . construct_list eof            (rule 1)
	includes -> includes . include string               (rule 79)

	tint           reduce using rule 2
	tdouble        reduce using rule 2
	tchar          reduce using rule 2
	tvoid          reduce using rule 2
	struct         reduce using rule 2
	include        shift, and enter state 5
	eof            reduce using rule 2

	construct_list goto state 4

State 3

	%start_parse -> program .                           (rule 0)

	%eof           accept


State 4

	program -> includes construct_list . eof            (rule 1)
	construct_list -> construct_list . construct        (rule 3)

	tint           shift, and enter state 14
	tdouble        shift, and enter state 15
	tchar          shift, and enter state 16
	tvoid          shift, and enter state 17
	struct         shift, and enter state 18
	eof            shift, and enter state 19

	construct      goto state 7
	structdecl     goto state 8
	funcdecl       goto state 9
	vardecl        goto state 10
	type           goto state 11
	primitive_type goto state 12
	struct_type    goto state 13

State 5

	includes -> includes include . string               (rule 79)

	string         shift, and enter state 6


State 6

	includes -> includes include string .               (rule 79)

	tint           reduce using rule 79
	tdouble        reduce using rule 79
	tchar          reduce using rule 79
	tvoid          reduce using rule 79
	struct         reduce using rule 79
	include        reduce using rule 79
	eof            reduce using rule 79


State 7

	construct_list -> construct_list construct .        (rule 3)

	tint           reduce using rule 3
	tdouble        reduce using rule 3
	tchar          reduce using rule 3
	tvoid          reduce using rule 3
	struct         reduce using rule 3
	eof            reduce using rule 3


State 8

	construct -> structdecl .                           (rule 5)

	tint           reduce using rule 5
	tdouble        reduce using rule 5
	tchar          reduce using rule 5
	tvoid          reduce using rule 5
	struct         reduce using rule 5
	eof            reduce using rule 5


State 9

	construct -> funcdecl .                             (rule 4)

	tint           reduce using rule 4
	tdouble        reduce using rule 4
	tchar          reduce using rule 4
	tvoid          reduce using rule 4
	struct         reduce using rule 4
	eof            reduce using rule 4


State 10

	construct -> vardecl .                              (rule 6)

	tint           reduce using rule 6
	tdouble        reduce using rule 6
	tchar          reduce using rule 6
	tvoid          reduce using rule 6
	struct         reduce using rule 6
	eof            reduce using rule 6


State 11

	funcdecl -> type . ident '(' ')' block              (rule 8)
	funcdecl -> type . ident '(' formals ')' block      (rule 9)
	vardecl -> type . ident array_sizes ';'             (rule 10)

	ident          shift, and enter state 23


State 12

	type -> primitive_type . stars                      (rule 65)

	ident          reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72

	stars          goto state 22

State 13

	type -> struct_type . stars                         (rule 66)

	ident          reduce using rule 72
	')'            reduce using rule 72
	'*'            reduce using rule 72

	stars          goto state 21

State 14

	primitive_type -> tint .                            (rule 67)

	ident          reduce using rule 67
	')'            reduce using rule 67
	'*'            reduce using rule 67


State 15

	primitive_type -> tdouble .                         (rule 68)

	ident          reduce using rule 68
	')'            reduce using rule 68
	'*'            reduce using rule 68


State 16

	primitive_type -> tchar .                           (rule 69)

	ident          reduce using rule 69
	')'            reduce using rule 69
	'*'            reduce using rule 69


State 17

	primitive_type -> tvoid .                           (rule 70)

	ident          reduce using rule 70
	')'            reduce using rule 70
	'*'            reduce using rule 70


State 18

	structdecl -> struct . ident '{' vardecl_list '}' ';'    (rule 7)
	struct_type -> struct . ident                       (rule 71)

	ident          shift, and enter state 20


State 19

	program -> includes construct_list eof .            (rule 1)

	%eof           reduce using rule 1


State 20

	structdecl -> struct ident . '{' vardecl_list '}' ';'    (rule 7)
	struct_type -> struct ident .                       (rule 71)

	ident          reduce using rule 71
	'{'            shift, and enter state 27
	'*'            reduce using rule 71


State 21

	type -> struct_type stars .                         (rule 66)
	stars -> stars . '*'                                (rule 73)

	ident          reduce using rule 66
	')'            reduce using rule 66
	'*'            shift, and enter state 26


State 22

	type -> primitive_type stars .                      (rule 65)
	stars -> stars . '*'                                (rule 73)

	ident          reduce using rule 65
	')'            reduce using rule 65
	'*'            shift, and enter state 26


State 23

	funcdecl -> type ident . '(' ')' block              (rule 8)
	funcdecl -> type ident . '(' formals ')' block      (rule 9)
	vardecl -> type ident . array_sizes ';'             (rule 10)

	';'            reduce using rule 74
	'('            shift, and enter state 25
	'['            reduce using rule 74

	array_sizes    goto state 24

State 24

	vardecl -> type ident array_sizes . ';'             (rule 10)
	array_sizes -> array_sizes . '[' int ']'            (rule 75)

	';'            shift, and enter state 36
	'['            shift, and enter state 37


State 25

	funcdecl -> type ident '(' . ')' block              (rule 8)
	funcdecl -> type ident '(' . formals ')' block      (rule 9)

	tint           shift, and enter state 14
	tdouble        shift, and enter state 15
	tchar          shift, and enter state 16
	tvoid          shift, and enter state 17
	struct         shift, and enter state 31
	')'            shift, and enter state 35

	formals        goto state 32
	formal         goto state 33
	type           goto state 34
	primitive_type goto state 12
	struct_type    goto state 13

State 26

	stars -> stars '*' .                                (rule 73)

	ident          reduce using rule 73
	')'            reduce using rule 73
	'*'            reduce using rule 73


State 27

	structdecl -> struct ident '{' . vardecl_list '}' ';'    (rule 7)

	tint           shift, and enter state 14
	tdouble        shift, and enter state 15
	tchar          shift, and enter state 16
	tvoid          shift, and enter state 17
	struct         shift, and enter state 31

	vardecl        goto state 28
	vardecl_list   goto state 29
	type           goto state 30
	primitive_type goto state 12
	struct_type    goto state 13

State 28

	vardecl_list -> vardecl .                           (rule 12)

	tint           reduce using rule 12
	tdouble        reduce using rule 12
	tchar          reduce using rule 12
	tvoid          reduce using rule 12
	struct         reduce using rule 12
	'}'            reduce using rule 12


State 29

	structdecl -> struct ident '{' vardecl_list . '}' ';'    (rule 7)
	vardecl_list -> vardecl_list . vardecl              (rule 11)

	tint           shift, and enter state 14
	tdouble        shift, and enter state 15
	tchar          shift, and enter state 16
	tvoid          shift, and enter state 17
	struct         shift, and enter state 31
	'}'            shift, and enter state 47

	vardecl        goto state 46
	type           goto state 30
	primitive_type goto state 12
	struct_type    goto state 13

State 30

	vardecl -> type . ident array_sizes ';'             (rule 10)

	ident          shift, and enter state 45


State 31

	struct_type -> struct . ident                       (rule 71)

	ident          shift, and enter state 44


State 32

	funcdecl -> type ident '(' formals . ')' block      (rule 9)
	formals -> formals . ',' formal                     (rule 14)

	','            shift, and enter state 42
	')'            shift, and enter state 43


State 33

	formals -> formal .                                 (rule 13)

	','            reduce using rule 13
	')'            reduce using rule 13


State 34

	formal -> type . ident                              (rule 15)

	ident          shift, and enter state 41


State 35

	funcdecl -> type ident '(' ')' . block              (rule 8)

	'{'            shift, and enter state 40

	block          goto state 39

State 36

	vardecl -> type ident array_sizes ';' .             (rule 10)

	int            reduce using rule 10
	double         reduce using rule 10
	string         reduce using rule 10
	char           reduce using rule 10
	null           reduce using rule 10
	ident          reduce using rule 10
	tint           reduce using rule 10
	tdouble        reduce using rule 10
	tchar          reduce using rule 10
	tvoid          reduce using rule 10
	struct         reduce using rule 10
	return         reduce using rule 10
	'('            reduce using rule 10
	'{'            reduce using rule 10
	'}'            reduce using rule 10
	for            reduce using rule 10
	while          reduce using rule 10
	if             reduce using rule 10
	else           reduce using rule 10
	'-'            reduce using rule 10
	'*'            reduce using rule 10
	'!'            reduce using rule 10
	'&'            reduce using rule 10
	sizeof         reduce using rule 10
	eof            reduce using rule 10


State 37

	array_sizes -> array_sizes '[' . int ']'            (rule 75)

	int            shift, and enter state 38


State 38

	array_sizes -> array_sizes '[' int . ']'            (rule 75)

	']'            shift, and enter state 52


State 39

	funcdecl -> type ident '(' ')' block .              (rule 8)

	tint           reduce using rule 8
	tdouble        reduce using rule 8
	tchar          reduce using rule 8
	tvoid          reduce using rule 8
	struct         reduce using rule 8
	eof            reduce using rule 8


State 40

	block -> '{' . block_statements '}'                 (rule 16)

	int            reduce using rule 17
	double         reduce using rule 17
	string         reduce using rule 17
	char           reduce using rule 17
	null           reduce using rule 17
	ident          reduce using rule 17
	tint           reduce using rule 17
	tdouble        reduce using rule 17
	tchar          reduce using rule 17
	tvoid          reduce using rule 17
	struct         reduce using rule 17
	return         reduce using rule 17
	'('            reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	for            reduce using rule 17
	while          reduce using rule 17
	if             reduce using rule 17
	'-'            reduce using rule 17
	'*'            reduce using rule 17
	'!'            reduce using rule 17
	'&'            reduce using rule 17
	sizeof         reduce using rule 17

	block_statementsgoto state 51

State 41

	formal -> type ident .                              (rule 15)

	','            reduce using rule 15
	')'            reduce using rule 15


State 42

	formals -> formals ',' . formal                     (rule 14)

	tint           shift, and enter state 14
	tdouble        shift, and enter state 15
	tchar          shift, and enter state 16
	tvoid          shift, and enter state 17
	struct         shift, and enter state 31

	formal         goto state 50
	type           goto state 34
	primitive_type goto state 12
	struct_type    goto state 13

State 43

	funcdecl -> type ident '(' formals ')' . block      (rule 9)

	'{'            shift, and enter state 40

	block          goto state 49

State 44

	struct_type -> struct ident .                       (rule 71)

	ident          reduce using rule 71
	')'            reduce using rule 71
	'*'            reduce using rule 71


State 45

	vardecl -> type ident . array_sizes ';'             (rule 10)

	';'            reduce using rule 74
	'['            reduce using rule 74

	array_sizes    goto state 24

State 46

	vardecl_list -> vardecl_list vardecl .              (rule 11)

	tint           reduce using rule 11
	tdouble        reduce using rule 11
	tchar          reduce using rule 11
	tvoid          reduce using rule 11
	struct         reduce using rule 11
	'}'            reduce using rule 11


State 47

	structdecl -> struct ident '{' vardecl_list '}' . ';'    (rule 7)

	';'            shift, and enter state 48


State 48

	structdecl -> struct ident '{' vardecl_list '}' ';' .    (rule 7)

	tint           reduce using rule 7
	tdouble        reduce using rule 7
	tchar          reduce using rule 7
	tvoid          reduce using rule 7
	struct         reduce using rule 7
	eof            reduce using rule 7


State 49

	funcdecl -> type ident '(' formals ')' block .      (rule 9)

	tint           reduce using rule 9
	tdouble        reduce using rule 9
	tchar          reduce using rule 9
	tvoid          reduce using rule 9
	struct         reduce using rule 9
	eof            reduce using rule 9


State 50

	formals -> formals ',' formal .                     (rule 14)

	','            reduce using rule 14
	')'            reduce using rule 14


State 51

	block -> '{' block_statements . '}'                 (rule 16)
	block_statements -> block_statements . statement    (rule 18)

	int            shift, and enter state 57
	double         shift, and enter state 58
	string         shift, and enter state 59
	char           shift, and enter state 60
	null           shift, and enter state 61
	ident          shift, and enter state 62
	tint           shift, and enter state 14
	tdouble        shift, and enter state 15
	tchar          shift, and enter state 16
	tvoid          shift, and enter state 17
	struct         shift, and enter state 31
	return         shift, and enter state 63
	'('            shift, and enter state 64
	'{'            shift, and enter state 40
	'}'            shift, and enter state 65
	for            shift, and enter state 66
	while          shift, and enter state 67
	if             shift, and enter state 68
	'-'            shift, and enter state 69
	'*'            shift, and enter state 70
	'!'            shift, and enter state 71
	'&'            shift, and enter state 72
	sizeof         shift, and enter state 73

	vardecl        goto state 53
	block          goto state 54
	statement      goto state 55
	expr           goto state 56
	type           goto state 30
	primitive_type goto state 12
	struct_type    goto state 13

State 52

	array_sizes -> array_sizes '[' int ']' .            (rule 75)

	';'            reduce using rule 75
	'['            reduce using rule 75


State 53

	statement -> vardecl .                              (rule 26)

	int            reduce using rule 26
	double         reduce using rule 26
	string         reduce using rule 26
	char           reduce using rule 26
	null           reduce using rule 26
	ident          reduce using rule 26
	tint           reduce using rule 26
	tdouble        reduce using rule 26
	tchar          reduce using rule 26
	tvoid          reduce using rule 26
	struct         reduce using rule 26
	return         reduce using rule 26
	'('            reduce using rule 26
	'{'            reduce using rule 26
	'}'            reduce using rule 26
	for            reduce using rule 26
	while          reduce using rule 26
	if             reduce using rule 26
	else           reduce using rule 26
	'-'            reduce using rule 26
	'*'            reduce using rule 26
	'!'            reduce using rule 26
	'&'            reduce using rule 26
	sizeof         reduce using rule 26


State 54

	statement -> block .                                (rule 20)

	int            reduce using rule 20
	double         reduce using rule 20
	string         reduce using rule 20
	char           reduce using rule 20
	null           reduce using rule 20
	ident          reduce using rule 20
	tint           reduce using rule 20
	tdouble        reduce using rule 20
	tchar          reduce using rule 20
	tvoid          reduce using rule 20
	struct         reduce using rule 20
	return         reduce using rule 20
	'('            reduce using rule 20
	'{'            reduce using rule 20
	'}'            reduce using rule 20
	for            reduce using rule 20
	while          reduce using rule 20
	if             reduce using rule 20
	else           reduce using rule 20
	'-'            reduce using rule 20
	'*'            reduce using rule 20
	'!'            reduce using rule 20
	'&'            reduce using rule 20
	sizeof         reduce using rule 20


State 55

	block_statements -> block_statements statement .    (rule 18)

	int            reduce using rule 18
	double         reduce using rule 18
	string         reduce using rule 18
	char           reduce using rule 18
	null           reduce using rule 18
	ident          reduce using rule 18
	tint           reduce using rule 18
	tdouble        reduce using rule 18
	tchar          reduce using rule 18
	tvoid          reduce using rule 18
	struct         reduce using rule 18
	return         reduce using rule 18
	'('            reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	for            reduce using rule 18
	while          reduce using rule 18
	if             reduce using rule 18
	'-'            reduce using rule 18
	'*'            reduce using rule 18
	'!'            reduce using rule 18
	'&'            reduce using rule 18
	sizeof         reduce using rule 18


State 56

	statement -> expr . ';'                             (rule 19)
	expr -> expr . '=' expr                             (rule 33)
	expr -> expr . '||' expr                            (rule 34)
	expr -> expr . '&&' expr                            (rule 35)
	expr -> expr . '|' expr                             (rule 36)
	expr -> expr . '^' expr                             (rule 37)
	expr -> expr . '&' expr                             (rule 38)
	expr -> expr . '==' expr                            (rule 39)
	expr -> expr . '!=' expr                            (rule 40)
	expr -> expr . '>=' expr                            (rule 41)
	expr -> expr . '>' expr                             (rule 42)
	expr -> expr . '<=' expr                            (rule 43)
	expr -> expr . '<' expr                             (rule 44)
	expr -> expr . '+' expr                             (rule 45)
	expr -> expr . '-' expr                             (rule 46)
	expr -> expr . '*' expr                             (rule 47)
	expr -> expr . '/' expr                             (rule 48)
	expr -> expr . '%' expr                             (rule 49)
	expr -> expr . '.' ident                            (rule 55)
	expr -> expr . '[' expr ']'                         (rule 56)
	expr -> expr . '->' ident                           (rule 57)

	'='            shift, and enter state 87
	';'            shift, and enter state 88
	'['            shift, and enter state 89
	'+'            shift, and enter state 90
	'-'            shift, and enter state 91
	'*'            shift, and enter state 92
	'/'            shift, and enter state 93
	'%'            shift, and enter state 94
	'=='           shift, and enter state 95
	'!='           shift, and enter state 96
	'<'            shift, and enter state 97
	'<='           shift, and enter state 98
	'>'            shift, and enter state 99
	'>='           shift, and enter state 100
	'&&'           shift, and enter state 101
	'||'           shift, and enter state 102
	'&'            shift, and enter state 103
	'|'            shift, and enter state 104
	'^'            shift, and enter state 105
	'.'            shift, and enter state 106
	'->'           shift, and enter state 107


State 57

	expr -> int .                                       (rule 27)

	'='            reduce using rule 27
	','            reduce using rule 27
	';'            reduce using rule 27
	')'            reduce using rule 27
	'['            reduce using rule 27
	']'            reduce using rule 27
	'+'            reduce using rule 27
	'-'            reduce using rule 27
	'*'            reduce using rule 27
	'/'            reduce using rule 27
	'%'            reduce using rule 27
	'=='           reduce using rule 27
	'!='           reduce using rule 27
	'<'            reduce using rule 27
	'<='           reduce using rule 27
	'>'            reduce using rule 27
	'>='           reduce using rule 27
	'&&'           reduce using rule 27
	'||'           reduce using rule 27
	'&'            reduce using rule 27
	'|'            reduce using rule 27
	'^'            reduce using rule 27
	'.'            reduce using rule 27
	'->'           reduce using rule 27


State 58

	expr -> double .                                    (rule 28)

	'='            reduce using rule 28
	','            reduce using rule 28
	';'            reduce using rule 28
	')'            reduce using rule 28
	'['            reduce using rule 28
	']'            reduce using rule 28
	'+'            reduce using rule 28
	'-'            reduce using rule 28
	'*'            reduce using rule 28
	'/'            reduce using rule 28
	'%'            reduce using rule 28
	'=='           reduce using rule 28
	'!='           reduce using rule 28
	'<'            reduce using rule 28
	'<='           reduce using rule 28
	'>'            reduce using rule 28
	'>='           reduce using rule 28
	'&&'           reduce using rule 28
	'||'           reduce using rule 28
	'&'            reduce using rule 28
	'|'            reduce using rule 28
	'^'            reduce using rule 28
	'.'            reduce using rule 28
	'->'           reduce using rule 28


State 59

	expr -> string .                                    (rule 30)

	'='            reduce using rule 30
	','            reduce using rule 30
	';'            reduce using rule 30
	')'            reduce using rule 30
	'['            reduce using rule 30
	']'            reduce using rule 30
	'+'            reduce using rule 30
	'-'            reduce using rule 30
	'*'            reduce using rule 30
	'/'            reduce using rule 30
	'%'            reduce using rule 30
	'=='           reduce using rule 30
	'!='           reduce using rule 30
	'<'            reduce using rule 30
	'<='           reduce using rule 30
	'>'            reduce using rule 30
	'>='           reduce using rule 30
	'&&'           reduce using rule 30
	'||'           reduce using rule 30
	'&'            reduce using rule 30
	'|'            reduce using rule 30
	'^'            reduce using rule 30
	'.'            reduce using rule 30
	'->'           reduce using rule 30


State 60

	expr -> char .                                      (rule 29)

	'='            reduce using rule 29
	','            reduce using rule 29
	';'            reduce using rule 29
	')'            reduce using rule 29
	'['            reduce using rule 29
	']'            reduce using rule 29
	'+'            reduce using rule 29
	'-'            reduce using rule 29
	'*'            reduce using rule 29
	'/'            reduce using rule 29
	'%'            reduce using rule 29
	'=='           reduce using rule 29
	'!='           reduce using rule 29
	'<'            reduce using rule 29
	'<='           reduce using rule 29
	'>'            reduce using rule 29
	'>='           reduce using rule 29
	'&&'           reduce using rule 29
	'||'           reduce using rule 29
	'&'            reduce using rule 29
	'|'            reduce using rule 29
	'^'            reduce using rule 29
	'.'            reduce using rule 29
	'->'           reduce using rule 29


State 61

	expr -> null .                                      (rule 31)

	'='            reduce using rule 31
	','            reduce using rule 31
	';'            reduce using rule 31
	')'            reduce using rule 31
	'['            reduce using rule 31
	']'            reduce using rule 31
	'+'            reduce using rule 31
	'-'            reduce using rule 31
	'*'            reduce using rule 31
	'/'            reduce using rule 31
	'%'            reduce using rule 31
	'=='           reduce using rule 31
	'!='           reduce using rule 31
	'<'            reduce using rule 31
	'<='           reduce using rule 31
	'>'            reduce using rule 31
	'>='           reduce using rule 31
	'&&'           reduce using rule 31
	'||'           reduce using rule 31
	'&'            reduce using rule 31
	'|'            reduce using rule 31
	'^'            reduce using rule 31
	'.'            reduce using rule 31
	'->'           reduce using rule 31


State 62

	expr -> ident .                                     (rule 32)
	expr -> ident . '(' actuals ')'                     (rule 61)
	expr -> ident . '(' ')'                             (rule 62)
